fix(WS): Hero, rich-snippets and button-groups configuration update.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
@@ -46,22 +46,30 @@ rich_snippet:
       label: Large
       settings:
         size: default
-  configuration:
-    size:
-      headline_size:
-        small: 'text-2xl'
-        default: 'text-2xl lg:text-4xl'
-        large: 'text-4xl lg:text-6xl'
-      spacing:
-        small: 'mb-3'
-        default: 'mb-3 lg:mb-4'
-        large: 'mb-4'
   settings:
     size:
       type: select
       required: true
       label: Size
       options:
-        small: Small
-        Default: Default
-        large: Large
+        small:
+          label: Small
+          configuration:
+            headline_text: 'text-2xl'
+            text: 'text-base'
+            spacing: 'mb-3'
+        default:
+          label: Default
+          configuration:
+            headline_text: 'text-2xl lg:text-4xl'
+            text: 'text-base'
+            spacing: 'mb-3 lg:mb-4'
+        large:
+          label: Large
+          configuration:
+            headline_text: 'text-4xl lg:text-6xl'
+            text: 'text-base lg:text-lg'
+            spacing: 'mb-4'
+  configuration:
+    default:
+      preheadline_classes: 'text-teal-500 text-2xl mb-2 font-bold'
