--- a/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.wingsuit.yml
@@ -20,6 +20,18 @@ button_group:
       required: true
       default_value: center
       options:
-        left: Left
-        center: Center
-        right: Right
+        left:
+          label: Left
+          configuration:
+            direction: ''
+        center:
+          label: Center
+          configuration:
+            direction: 'justify-center'
+        right:
+          label: Right
+          configuration:
+            direction: 'justify-end'
+  configuration:
+    default:
+      classes: 'flex flex-col md:flex-row pt-8 space-y-2 md:space-x-2 md:space-y-0'
