fix(ws): Components update and integration.

--- a/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
+++ b/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
@@ -8,6 +8,8 @@ core:
         preprocess: true
       ws-assets://menu-primary.css:
         preprocess: true
+      ws-assets://rich-text.css:
+        preprocess: true
 
   js:
     ws-assets://vendors/alpine.js:
