--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -57,6 +57,7 @@ grid:
     reverse:
       type: boolean
       label: Reverse
+      allow_token: true
       group: tab_cells
 
   configuration:
