--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.wingsuit.yml
@@ -35,10 +35,13 @@ avatar:
         variant: image
         settings:
           style: responsive_1_1_400w
+    url:
+      label: Url
+      type: url
   configuration:
     defaults:
       wrapper_classes: 'rounded-xl overflow-hidden p-8'
       image_classes: 'relative overflow-hidden flex-none w-[152px] h-[152px] lg:h-[168px] lg:w-[168px] rounded-full mx-auto aspect-[1/1]'
       content_wrapper_classes: 'mt-4 gap-y-4 flex-1 flex justify-center items-center flex-col'
-      name_classes: 'text-xl font-bold'
+      name_classes: 'text-xl font-bold text-center'
       title_classes: 'text-base text-center mt-1'
