--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -49,4 +49,5 @@ card:
       label: Url
   configuration:
     defaults:
+      attribute_classes: 'flex flex-1 group'
       wrapper_classes: 'group-hover:shadow-lg flex max-w-xl flex-1 rounded-lg overflow-hidden w-full'
