--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -20,13 +20,14 @@
   "scripts": {
     "build-storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -c ./apps/storybook",
     "packtracker": "yarn storybook -c ./apps/storybook  --webpack-stats-json /tmp --smoke-test --ci --no-manager-cache --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/manager-stats.json",
-    "storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true start-storybook  -p 9011 -c ./apps/storybook"
+    "storybook": "yarn ws dev storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@packtracker/webpack-plugin": "^2.0.1",
     "@storybook/addon-links": "^7.0.0-beta.31",
+    "@storybook/addon-docs": "^7.0.0-beta.31",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^7.0.0-beta.31",
@@ -38,6 +39,7 @@
     "@wingsuit-designsystem/core": "2.0.0-alpha.0",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.0",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.0",
+    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
