fix: Footer menu.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -90,6 +90,7 @@ button:
     url:
       type: url
       label: Url
+      expose_as_field: true
       description: The action url of your button
       preview: 'https://github.com/wingsuit-designsystem/wingsuit'
     disabled:
