--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -157,3 +157,10 @@ menu:
               11:
                 title: Imprint
                 url: '#'
+      configuration:
+        "parent_list_classes": ""
+        "parent_list_item_classes": ""
+        "parent_link_classes": "font-bold dark:text-white text-lg font-sans"
+        "child_list_classes": ""
+        "child_list_item_classes": ""
+        "child_link_classes": "dark:text-white text-base font-serif hover:underline"
