--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
@@ -24,7 +24,7 @@ accordion_item:
       classes: 'relative border-b border-gray-200'
       wrapper_classes: 'w-full py-6 px-4 text-left cursor-pointer foo'
       label_wrapper_classes: 'flex items-center gap-4 justify-between'
-      label_classes: 'font-bold'
+      label_classes: 'font-bold font-display'
       icon_classes: 'text-purple-600'
       content_wrapper_classes: 'relative overflow-hidden transition-all max-h-0 duration-700'
       content_classes: 'px-4 lg:pr-16 pb-6 bar'
