--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -72,4 +72,4 @@ banner:
     defaults:
       wrapper_classes: 'relative dark rounded-lg border border-transparent overflow-hidden'
       teaser_wrapper_classes: 'absolute top-0 left-0 w-full h-full flex'
-      teaser_classes: 'bg-black bg-opacity-25 mix-blend-normal rounded-lg p-6 m-6 text-lg lg:text-5xl text-white font-sans font-bold'
+      teaser_classes: 'bg-black bg-opacity-25 mix-blend-normal rounded-lg p-6 m-6 text-lg lg:text-5xl text-white font-display font-bold'
