--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -160,7 +160,7 @@ menu:
       configuration:
         "parent_list_classes": ""
         "parent_list_item_classes": ""
-        "parent_link_classes": "font-bold dark:text-white text-lg font-sans"
+        "parent_link_classes": "font-bold font-display dark:text-white text-lg font-sans"
         "child_list_classes": ""
         "child_list_item_classes": ""
         "child_link_classes": "dark:text-white text-base font-serif hover:underline"
