--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -18,9 +18,9 @@
     "prototyping"
   ],
   "scripts": {
-    "build-storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -c ./apps/storybook",
-    "packtracker": "yarn storybook -c ./apps/storybook  --webpack-stats-json /tmp --smoke-test --ci --no-manager-cache --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/manager-stats.json",
-    "storybook": "yarn ws dev storybook"
+    "build-storybook": "yarn ws build storybook",
+    "packtracker": "yarn ws build storybook --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
+    "storybook": "yarn ws dev storybook --help"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
