--- a/docs/package.json
+++ b/docs/package.json
@@ -87,7 +87,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/typography": "^0.5.1",
     "alpinejs": "2.7.0",
-    "prismjs": "1.23.0",
+    "prismjs": "~1.29.0",
     "tailwindcss": "^3.1.4"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
