--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -18,7 +18,7 @@
     "prototyping"
   ],
   "scripts": {
-    "build-storybook": "yarn ws build storybook",
+    "build:storybook": "yarn ws build storybook",
     "packtracker": "yarn ws build storybook --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
     "storybook": "yarn ws dev storybook"
   },
