fix: Refactor slider components

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "private": true,
+  "version": "2.0.0-alpha.0",
   "scripts": {
     "coverage": "codecov",
     "test": "node ./scripts/test.js",
