--- a/presets/imagemin/package.json
+++ b/presets/imagemin/package.json
@@ -26,20 +26,17 @@
     "url": "https://github.com/wingsuit-designsystem/wingsuit/issues"
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
-  "dependencies": {
-    "@wingsuit-designsystem/core": "1.1.0-alpha.0",
-    "imagemin-gifsicle": "^6.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-optipng": "^6.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webp-webpack-plugin": "^3.1.0",
-    "imagemin-webpack-plugin": "^2.4.2"
-  },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc"
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
+  "dependencies": {
+    "@squoosh/lib": "^0.5.3",
+    "image-minimizer-webpack-plugin": "^3.8.2",
+    "sharp": "^0.32.0",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.0"
+  }
 }
