fix: Adjust flex forms

--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
@@ -12,5 +12,16 @@ page_webform:
       type: pattern
       label: Field content
       preview:
-        id: form_element
-        variant: textfield
+        id: form_flex
+        fields:
+          children:
+            -
+              id: form_element
+              variant: textfield
+              settings:
+                flex: flex-1
+            -
+              id: form_element
+              variant: textfield
+              settings:
+                flex: flex-1
