--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/radios.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/radios.wingsuit.yml
@@ -16,4 +16,5 @@ form_radios:
           variant: "radio"
         - id: form_element
           variant: "radio"
-  visibility: storybook
+  classes:
+    wrapper: ''
