--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/fieldset.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/fieldset.wingsuit.yml
@@ -22,7 +22,8 @@ form_fieldgroup:
     children:
       type: pattern
       label: Children
-
   configuration:
     classes:
-      wrapper: ''
+      wrapper: 'form-fieldset js-form-item form-item js-form-wrapper form-wrapper'
+    legend:
+      defaults: 'h2'
