--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/flex.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/flex.wingsuit.yml
@@ -8,4 +8,4 @@ form_flex:
       label: Children
   configuration:
     classes:
-      wrapper: ''
+      wrapper: 'flex flex-col md:flex-row gap-4'
