--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/radios.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/radios.wingsuit.yml
@@ -16,5 +16,6 @@ form_radios:
           variant: "radio"
         - id: form_element
           variant: "radio"
-  classes:
-    wrapper: ''
+  configuration:
+    classes:
+      wrapper: 'form-item--radio'
