--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/select.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/select.wingsuit.yml
@@ -17,3 +17,6 @@ form_select:
           type: "option"
         - label: Option 3
           type: "option"
+  configuration:
+    classes:
+      wrapper: 'form-select rounded-md'
