--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/textarea.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/textarea.wingsuit.yml
@@ -15,4 +15,5 @@ form_textarea:
       preview:
         faker: lorem.sentence
   configuration:
-    classes: ''
+    classes:
+      wrapper: 'form-textarea'
