--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.wingsuit.yml
@@ -13,4 +13,10 @@ form_radio:
       label: Children
   configuration:
     classes:
-      wrapper: ''
+      wrapper:
+          '
+          form-radio
+          bg-form-radio-icon-unchecked checked:bg-form-radio-icon-checked
+          dark:bg-dark-form-radio-icon-unchecked dark:checked:bg-dark-form-radio-icon-checked
+          bg-no-repeat bg-center border-0 w-5 h-5
+          '
