--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/select.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/select.wingsuit.yml
@@ -19,4 +19,5 @@ form_select:
           type: "option"
   configuration:
     classes:
-      wrapper: 'form-select rounded-md'
+      wrapper: 'form-select w-full rounded-md leading-[30px]
+                focus:ring-0 focus:border focus:border-transparent focus:outline focus:outline-offset-[0px] focus:outline-yellow-500'
