--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/web-form/web-form.wingsuit.yml
@@ -52,12 +52,27 @@ page_webform:
                       variant: textfield
                       settings:
                         flex: flex-1
+                        floating_label: 'true'
                     - id: form_element
                       variant: textfield
                       settings:
                         flex: flex-1
+                        floating_label: 'true'
               - id: form_element
                 variant: textfield
+              - id: form_element
+                variant: date
+              - id: form_element
+                variant: email
+              - id: form_element
+                variant: tel
+              - id: form_element
+                variant: file
+              - id: form_element
+                variant: select
+                settings:
+                  description_display: after
+                  description_text: 'description text bottom'
               - id: form_element
                 variant: checkbox
               - id: form_element
@@ -66,10 +81,6 @@ page_webform:
                 variant: radio
               - id: form_element
                 variant: radios
-              - id: form_element
-                variant: file
-              - id: form_element
-                variant: select
               - id: form_submit
           settings:
             width: default
