--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.wingsuit.yml
@@ -15,11 +15,16 @@ form_element:
         children:
           id: form_input
           variant: "email"
+      settings:
+        label:
+          preview: 'test'
     file:
       label: File
       fields:
         children:
           id: form_file
+      settings:
+        floating_label: 'false'
     tel:
       label: Tel
       fields:
@@ -32,6 +37,8 @@ form_element:
         children:
           id: form_input
           variant: "date"
+      settings:
+        floating_label: 'false'
     checkbox:
       label: Checkbox
       fields:
@@ -40,15 +47,20 @@ form_element:
       configuration:
         spacings:
           margin: 'mb-4'
+      settings:
+        floating_label: 'false'
     checkboxes:
       label: Checkboxes
       fields:
         children:
           id: form_checkboxes
+      settings:
+        floating_label: 'false'
     radio:
       label: Radio
       settings:
         label_display: after
+        floating_label: 'false'
       fields:
         children:
           id: form_radio
@@ -60,12 +72,15 @@ form_element:
       fields:
         children:
           id: form_radios
+      settings:
+        floating_label: 'false'
     select:
       label: Select
       fields:
         children:
           id: form_select
-
+      settings:
+        floating_label: 'false'
   settings:
     flex:
       type: textfield
@@ -90,6 +105,9 @@ form_element:
     attributes:
       type: attributes
       label: Attributes
+    floating_label:
+      type: boolean
+      label: Floating label
   fields:
     label:
       type: pattern
@@ -116,7 +134,13 @@ form_element:
   configuration:
     classes:
       wrapper: 'js-form-item form-item block'
-      description: 'form-item__description'
+      description: 'form-item__description text-sm py-[6px]'
       error: 'bg-red-500'
     spacings:
       margin: 'mb-6'
+    floating_label:
+      wrapper: 'floating relative'
+      floating: 'floating__label  bg-white flex w-full h-[48px] rounded-md'
+      left: 'floating__label__left border border-gray-400 border-r-0 w-[20px] rounded-l-md'
+      center: 'floating__label__center border-b border-gray-400'
+      right: 'floating__label__right border border-l-0 border-gray-400 w-full rounded-r-md'
