--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/input.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/input.wingsuit.yml
@@ -7,10 +7,6 @@ form_input:
       label: Textfield
       settings:
         attributes: "type=\"text\" placeholder=\"Placeholder\""
-      configuration:
-        classes:
-          radius: 'rounded-md'
-          wrapper: 'form-input py-3 px-4'
     password:
       label: Password
       settings:
@@ -22,7 +18,7 @@ form_input:
     tel:
       label: Tel
       settings:
-        attributes: "type=\"tel\""
+        attributes: "type=\"tel\" placeholder=\"Telephone\""
     date:
       label: Date
       settings:
@@ -38,6 +34,7 @@ form_input:
       label: Children
   configuration:
     classes:
-      wrapper: 'form-input p-2'
-      radius: ''
+      wrapper: 'form-input py-[11px] px-4 border-gray-400
+                focus:ring-0 focus:border focus:border-transparent focus:outline focus:outline-offset-[0px] focus:outline-yellow-500'
+      radius: ' rounded-md'
 
