fix(#44): Cookie banner integrieren.

--- a/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
+++ b/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
@@ -10,6 +10,8 @@ core:
         preprocess: true
       ws-assets://rich-text.css:
         preprocess: true
+      ws-assets://cookie-banner.css:
+        preprocess: true
 
   js:
     ws-assets://vendors/alpine.js:
